<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".userInterface.mainActivity.MainActivity">

        <TextView
            android:id="@+id/tv_company_detail"
            style="@style/Description"
            android:layout_width="189dp"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="@+id/tv_repository_detail"
            app:layout_constraintTop_toTopOf="@+id/company"
            tools:text="@string/company" />

        <ImageView
            android:id="@+id/location_logo"
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintEnd_toStartOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location" />

        <TextView
            android:id="@+id/tv_username_detail"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
            tools:text="@string/username" />

        <ImageView
            android:id="@+id/repository_logo"
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_library_books_24"
            app:layout_constraintBottom_toTopOf="@+id/company"
            app:layout_constraintEnd_toStartOf="@+id/repository"
            app:layout_constraintTop_toTopOf="@+id/repository" />

        <TextView
            android:id="@+id/location"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            app:layout_constraintBottom_toTopOf="@+id/repository"
            app:layout_constraintStart_toStartOf="@+id/tv_data_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_data_user" />

        <TextView
            android:id="@+id/company"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@+id/repository"
            app:layout_constraintTop_toBottomOf="@+id/repository" />

        <TextView
            android:id="@+id/tv_name_detail"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_avatar_detail"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tv_repository_detail"
            style="@style/Description"
            android:layout_width="189dp"
            android:layout_height="21dp"
            app:layout_constraintStart_toStartOf="@+id/tv_location_detail"
            app:layout_constraintTop_toTopOf="@+id/repository"
            tools:text="@string/repository" />

        <TextView
            android:id="@+id/tv_data_user"
            style="@style/DescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/data_user"
            app:layout_constraintStart_toStartOf="@+id/tv_avatar_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_detail" />

        <TextView
            android:id="@+id/tv_location_detail"
            style="@style/Description"
            android:layout_width="189dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"
            tools:text="@string/location" />

        <TextView
            android:id="@+id/repository"
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/repository"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="22dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_baseline_business_center_24"
            app:layout_constraintBottom_toBottomOf="@+id/company"
            app:layout_constraintEnd_toStartOf="@+id/company"
            app:layout_constraintTop_toTopOf="@+id/company" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tv_avatar_detail"
            android:layout_width="190dp"
            android:layout_height="177dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="184dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_favorite_24" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_detail"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            tools:layout_editor_absoluteX="0dp" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>